--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 data/Disability_and_Health_Data_System__DHDS__20240219.csv filter=lfs diff=lfs merge=lfs -text
+data/*.csv filter=lfs diff=lfs merge=lfs -text
